# fnol

./: .gitignore  Makefile  README.md  package.json  turbo.json
backend/: main.py  pyproject.toml  requirements.txt
backend/agents/: comms_agent.py  damage_agent.py  document_agent.py  fraud_agent.py  human_review_agent.py  intake_agent.py  policy_agent.py  stp_agent.py  triage_agent.py
backend/config/: settings.py
backend/graph/: edges.py  orchestrator.py  state.py
backend/tools/: fraud_checks.py  notifications.py  ocr.py  policy_api.py  vision.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(adjuster)/: layout.tsx
frontend/src/app/(adjuster)/claims/: page.tsx
frontend/src/app/(adjuster)/claims/[id]/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(claimant)/: layout.tsx
frontend/src/app/(claimant)/report/: page.tsx
frontend/src/app/(cxo)/: layout.tsx
frontend/src/app/(cxo)/dashboard/: page.tsx
frontend/src/app/(manager)/: layout.tsx
frontend/src/app/(manager)/pipeline/: page.tsx
frontend/src/app/api/claims/[id]/decision/: route.ts
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/: DocumentUpload.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/lib/: auth.ts
frontend/src/lib/types/: agent-state.ts
